--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,6 @@
     <div id="js-output" class="gallery">
       <!-- tutaj będzie galeria-->
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button id="more" type="button" class="load-more">Load more</button>
   </body>
 </html>
